--- a/src/Integration/Resources/Strings.resx
+++ b/src/Integration/Resources/Strings.resx
@@ -278,8 +278,8 @@ Localization note: '[try again]()' is a special markup used to translate the tex
     <comment>A progress notification message. {0} nuget package id, {1} project name</comment>
   </data>
   <data name="FailedDuringNuGetPackageInstall" xml:space="preserve">
-    <value>Failed to install NuGet package '{0}' for project '{1}'. Exception:\n{2}</value>
-    <comment>Output window message in case of failure - {0} nuget package id, {1} project name, {2} exception text</comment>
+    <value>Failed to install NuGet package '{0}' for project '{1}'. Message: {2}</value>
+    <comment>Output window message in case of failure - {0} nuget package id, {1} project name, {2} message</comment>
   </data>
   <data name="FailedToToBindSolution" xml:space="preserve">
     <value>Failed to bind the solution to SonarQube project, [try again](). 
