--- a/src/Integration/Resources/Strings.resx
+++ b/src/Integration/Resources/Strings.resx
@@ -291,7 +291,7 @@ ocalization note: '[try again]()' is a special markup used to translate the text
     <value>Binding solution to SonarQube project: {0}</value>
     <comment>Output window message prefix that will be common to all the steps (more than one) in the binding workflow. {0} the step specific message in that workflow.</comment>
   </data>
-  <data name="FinishedSolutionBindingWorkflow" xml:space="preserve">
+  <data name="FinishedSolutionBindingWorkflowSuccessful" xml:space="preserve">
     <value>Completed successfully</value>
     <comment>A progress notification message</comment>
   </data>
@@ -428,5 +428,9 @@ Localization note: '[Don't warn me again]()' is a special markup used to transla
   <data name="SonarQubeName" xml:space="preserve">
     <value>SonarQube</value>
     <comment>Name of SonarQube server product</comment>
+  </data>
+  <data name="FinishedSolutionBindingWorkflowNotAllPackagesInstalled" xml:space="preserve">
+    <value>Not all NuGet packages were installed. Please see output above for more information.</value>
+    <comment>Output message indicating not all NuGet packages were installed during the binding workflow</comment>
   </data>
 </root>
