Prepare for solution level conficts detection check once synced
1. Moved all service-liked interface to be serviced by the host - this helped to simplify the test specific service injection and simplifyed the product code that in most cases no longer needs those interfaces to be passed from the constructor.

2. Extracted the logic from binding into a service that will be used in the last piece (i.e. find and fix conflicts in the entire solution).

I also included a code example (BindingController.CheckForConflicts) that I'll be aiming for in the last PR for this feature. In general there will be a service that I can invoke from other places and not just after binding, although in those case we will need to address some of the edge cases which I don't plan on handling at first (need to get initial feedback from Jean-Marc first).

--- a/src/Integration/Resources/Strings.resx
+++ b/src/Integration/Resources/Strings.resx
@@ -229,10 +229,6 @@ Localization note: '[try again]()' is a special markup used to translate the tex
     <value>Rule set generated from SonarQube</value>
     <comment>Generated rule set description.</comment>
   </data>
-  <data name="FailedToSetCodeAnalysisRuleSetMessage" xml:space="preserve">
-    <value>Failed to set the code analysis ruleset for project: {0}.</value>
-    <comment>Output window error message. {0} - project unique name</comment>
-  </data>
   <data name="PathHelperAbsolutePathExpected" xml:space="preserve">
     <value>An absolute file path was expected.</value>
     <comment>Exception message indicating the provided path should be an absolute path.</comment>
@@ -437,5 +433,9 @@ Localization note: '[Don't warn me again]()' is a special markup used to transla
     <value>{0}: Unexpected error: {1}. You can help us improve by reporting this bug at {2}.</value>
     <comment>{0} - the class name, {1} - error message, {2} url.
 This is the general format to use when writing errors to output window or when there might not be enough context for the user to understand where is the error comming from.</comment>
+  </data>
+  <data name="CouldNotFindCodeAnalysisRuleSetPropertyOnProject" xml:space="preserve">
+    <value>Warning: could not find CodeAnalysisRuleSet for project '{0}'</value>
+    <comment>Warning message. '{0}' project unique name </comment>
   </data>
 </root>
