Refactor existing code
Refactor code to support detection of unbound project that will use some of the
existing code that needed to shared with the new functionality

--- a/src/Integration/Resources/Strings.resx
+++ b/src/Integration/Resources/Strings.resx
@@ -544,4 +544,7 @@ This is the general format to use when writing errors to output window or when t
     <comment>output window message. 
 {0} - rule set file path </comment>
   </data>
+  <data name="SolutionIsClosed" xml:space="preserve">
+    <value>The operation requires an open solution.</value>
+  </data>
 </root>
