Address comments from Duncan + Eyal

--- a/src/Integration/Resources/Strings.resx
+++ b/src/Integration/Resources/Strings.resx
@@ -458,4 +458,12 @@ This is the general format to use when writing errors to output window or when t
     <value>Discovering solution projects</value>
     <comment>Progress step message indicating projects are being discovered in the current solution</comment>
   </data>
+  <data name="InvalidTestProjectRegexPattern" xml:space="preserve">
+    <value>Test project regular expression pattern '{0}' is invalid. The default will be used instead. Please check your server settings.</value>
+    <comment>Warning output message indicating that the test project name regex was invalid. {0} invalid regex pattern</comment>
+  </data>
+  <data name="ProjectFilterDteProjectFailedToGetIVs" xml:space="preserve">
+    <value>Could not get the IVsHierarchy/IVsBuildPropertyStorage for the given project is IVsBuildPropertyStorage for the given EnvDTE.Project</value>
+    <comment>Exception message indicating was unable to get the equivalent IVs objects for the passed EnvDTE.Project.</comment>
+  </data>
 </root>
