--- a/src/Integration/Resources/Strings.resx
+++ b/src/Integration/Resources/Strings.resx
@@ -470,8 +470,8 @@ This is the general format to use when writing errors to output window or when t
     <value>Weakened rules:</value>
   </data>
   <data name="RuleSetConflictsDetected" xml:space="preserve">
-    <value>The applied ruleset is weakening the SonarQube quality profile in one or more projects. See output window (General) for more details. You can also [fix]() that automatically.</value>
-    <comment>[fix]()? - markup (the 'fix' text needs to be formatted [XXX]() for specific reason.</comment>
+    <value>The applied ruleset is weakening the SonarQube quality profile in one or more projects. See output window (General) for more details. [Click here]() to fix automatically.</value>
+    <comment>[Click here]()? - markup (the 'Click here' text needs to be formatted [XXX]() for specific reason.</comment>
   </data>
   <data name="ConflictsManagerWarningMessage" xml:space="preserve">
     <value>SonarLint conflicts manager warning: {0}</value>
@@ -479,7 +479,7 @@ This is the general format to use when writing errors to output window or when t
 {0} - message</comment>
   </data>
   <data name="ConflictDetailMissingRules" xml:space="preserve">
-    <value>Missing rules (or set to None): </value>
+    <value>Missing rules (or Action set to None): </value>
     <comment>{0} - list of rule ids</comment>
   </data>
   <data name="ConflictDetailWeakenedRulesDetail" xml:space="preserve">
@@ -506,7 +506,7 @@ This is the general format to use when writing errors to output window or when t
 {0} - file path
 {1} - file path</comment>
   </data>
-  <data name="InconsistedRuleSetDirectoriesWarning" xml:space="preserve">
+  <data name="InconsistentRuleSetDirectoriesWarning" xml:space="preserve">
     <value>Different CodeAnalysisRuleSetDirectories value '{0}' for RuleSet '{1}'. Using value '{2}'.</value>
     <comment>Output message
 {0} - msbuild property value
