--- a/src/Integration/Resources/Strings.resx
+++ b/src/Integration/Resources/Strings.resx
@@ -547,6 +547,19 @@ This is the general format to use when writing errors to output window or when t
   <data name="SolutionIsClosed" xml:space="preserve">
     <value>The operation requires an open solution.</value>
   </data>
+  <data name="FilteredOutProjectFormat" xml:space="preserve">
+    <value>* {0}</value>
+    <comment>Output window message
+{0} Unique project name</comment>
+  </data>
+  <data name="FilteredOutProjectFromBindingHeader" xml:space="preserve">
+    <value>The following projects are either not currently supported, excluded according to server specifications, or have been explicitly marked as excluded:</value>
+    <comment>Output window message</comment>
+  </data>
+  <data name="FilteredOutProjectFromBindingEnding" xml:space="preserve">
+    <value>You can change the exclusion options via the SonarLint project-level context menu i.e. Solution Explorer -&gt; Select project(s)</value>
+    <comment>Output window message</comment>
+  </data>
   <data name="UnknownLanguageName" xml:space="preserve">
     <value>Unknown</value>
     <comment>Name of any unknown languages</comment>
