--- a/src/Integration/Resources/Strings.resx
+++ b/src/Integration/Resources/Strings.resx
@@ -565,11 +565,11 @@ This is the general format to use when writing errors to output window or when t
     <comment>Name of any unknown languages</comment>
   </data>
   <data name="SonarLintInfoBarUpdateCommandIsBusyRetry" xml:space="preserve">
-    <value>SonarLint: Could not update the binding since the command is not available at the moment. Please try again and make sure that not building or debugging.</value>
+    <value>SonarLint: Could not update the binding because the command is not currently available. Please try again and ensure that the solution is not building or currently being debugged.</value>
     <comment>Output window message</comment>
   </data>
   <data name="SonarLintInfoBarUnboundProjectsMessage" xml:space="preserve">
-    <value>SonarLint: One or more RuleSet is out of date or not linked to the SonarQube profile-based RuleSet (see General Output for affected projects)</value>
+    <value>SonarLint: One or more rule sets are out of date or not linked to the SonarQube quality profile rule set (see General Output for affected projects)</value>
     <comment>Info bar message</comment>
   </data>
   <data name="SonarLintInfoBarUpdateCommandText" xml:space="preserve">
@@ -595,7 +595,7 @@ This is the general format to use when writing errors to output window or when t
     <comment>Output window message</comment>
   </data>
   <data name="SonarLintInfoBarUpdateCommandRetryNoActiveSection" xml:space="preserve">
-    <value>The SonarQube active section was closed and we cannot proceed with the update. Please try again.</value>
+    <value>The SonarQube Team Explorer page was closed and we cannot proceed with the update. Please try again.</value>
     <comment>Output window message</comment>
   </data>
   <data name="SonarLintInfoBarUpdateCommandInvalidSolutionBindings" xml:space="preserve">
