--- a/src/Integration/Resources/Strings.resx
+++ b/src/Integration/Resources/Strings.resx
@@ -171,7 +171,7 @@
   </data>
   <data name="ConnectionFailed" xml:space="preserve">
     <value>Cannot connect to the SonarQube server. Make sure you provided the correct connection information, including your sign-in credentials, and [try again](). 
-See more information in the output window.</value>
+See more information in the output window (SonarLint).</value>
     <comment>The error message the user sees when the connection has failed. The message will appear in team explorer.
 Localization note: '[try again]()' is a special markup used to translate the text 'try again' into a hyperlink. Make sure to keep it localized content in with that format to avoid reducing functionality in the localized version of the product</comment>
   </data>
@@ -275,7 +275,7 @@ Localization note: '[try again]()' is a special markup used to translate the tex
   </data>
   <data name="FailedToToBindSolution" xml:space="preserve">
     <value>Failed to bind the solution to SonarQube project, [try again](). 
-See more information in the output window.</value>
+See more information in the output window (SonarLint).</value>
     <comment>Team explorer notification in case of a failure to bind a solution to SonarQube project
 ocalization note: '[try again]()' is a special markup used to translate the text 'try again' into a hyperlink. Make sure to keep it localized content in with that format to avoid reducing functionality in the localized version of the product</comment>
   </data>
@@ -466,7 +466,7 @@ This is the general format to use when writing errors to output window or when t
     <value>Weakened rules:</value>
   </data>
   <data name="RuleSetConflictsDetected" xml:space="preserve">
-    <value>The applied ruleset is weakening the SonarQube quality profile in one or more projects. See output window (General) for more details. [Click here]() to fix automatically.</value>
+    <value>The applied ruleset is weakening the SonarQube quality profile in one or more projects. See output window (SonarLint) for more details. [Click here]() to fix automatically.</value>
     <comment>[Click here]()? - markup (the 'Click here' text needs to be formatted [XXX]() for specific reason.</comment>
   </data>
   <data name="ConflictsManagerWarningMessage" xml:space="preserve">
@@ -569,7 +569,7 @@ This is the general format to use when writing errors to output window or when t
     <comment>Output window message</comment>
   </data>
   <data name="SonarLintInfoBarUnboundProjectsMessage" xml:space="preserve">
-    <value>SonarLint: One or more rule sets are out of date or not linked to the SonarQube quality profile rule set (see General Output for affected projects)</value>
+    <value>SonarLint: One or more rule sets are out of date or not linked to the SonarQube quality profile rule set. See output window (SonarLint) for affected projects.</value>
     <comment>Info bar message</comment>
   </data>
   <data name="SonarLintInfoBarUpdateCommandText" xml:space="preserve">
