--- a/src/Integration/Resources/Strings.resx
+++ b/src/Integration/Resources/Strings.resx
@@ -641,7 +641,7 @@ This is the general format to use when writing errors to output window or when t
     <comment>Ouput window message</comment>
   </data>
   <data name="SonarLintInfoBarOldBindingFile" xml:space="preserve">
-    <value>SonarLint can now tell you when the quality profile in SonarQube profject is updated. Press Update to enable this feature now.</value>
+    <value>SonarLint can now tell you when the quality profile in SonarQube project is updated. Press Update to enable this feature now.</value>
     <comment>Info bar message</comment>
   </data>
 </root>
